--- a/apb/roles/provision-java-starter-guides/templates/etherpad.txt.j2
+++ b/apb/roles/provision-java-starter-guides/templates/etherpad.txt.j2
@@ -1,4 +1,4 @@
-Welcome to the \"Getting started for Developers\" on OpenShift Workshop.
+Welcome to the 'Getting started for Developers' on OpenShift Workshop.
 
 If this is your first time using an Etherpad, it allows EVERYONE to edit
 documents collaboratively in real-time, much like a live multi-player editor
@@ -7,7 +7,7 @@ all work on the same document at the same time.
 
 To start using this collaboration tool, we are going to identify some logistics.
 
-Find an open user login and assign yourself one, remember it, you'll use this
+Find an open user login and assign yourself one. Remember it, you will use this
 to login:
 
 {% for user_num in range(1, user_count|int + 1) %}
@@ -16,5 +16,5 @@ user{{ user_num }}=
 
 Parking Lot
 -----------
-If there is anything we don\'t have time to cover, record it here.
+If there is anything we do not have time to cover, record it here.
 
